trying to add jvm options